# wordly_helper

./: Cargo.toml  build.sh  readme.md
data/: sowpods_5.txt  words_alpha5.txt
src/: main.rs  word.rs  ws.rs
