[package]
name = "wordle_api"
version = "0.1.0"
authors = ["Serhiy Barhamon"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a_thing={git="https://github.com/Lurk/a_thing.git"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
actix-web = "3"
actix-web-actors = "3"
actix = "0.10.0"
actix-cors = "0.5.4"
chrono = "0.4.19"
