[package]
name = "wordle_api"
description = "api for Wordle cheat"
version = "0.1.0"
authors = ["Serhiy Barhamon"]
edition = "2021"
license = "MIT"

[package.metadata.deb]
assets = [
  ["target/release/wordle_api", "usr/bin/wordle_api", "755"],
  ["data/sowpods_5.txt", "etc/wordle_api/sowpods_5.txt", "644"],
  ["readme.md", "usr/share/doc/wordle_api/README", "644"],
]

[dependencies]
a_thing={git="https://github.com/Lurk/a_thing.git"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
actix-web = "4"
actix-web-actors = "4"
actix = "0.13.1"
actix-cors = "0.6.4"
chrono = "0.4.35"
